@@ -1,3 +1,3 @@
 prog: xml1
-vgopts: --xml=yes --xml-fd=2 --log-file=/dev/null
+vgopts: --xml=yes --xml-fd=2 --log-file=/dev/null --keep-stacktraces=alloc-then-free
 stderr_filter: filter_xml
